# vollbeyball-team-creator

./: .gitignore  pyproject.toml  requirements.txt
app/: api.py
app/auth/: authentication.py
app/config/: auth.py  database.py  settings.py
app/endpoints/: auth.py  player.py
app/enums/: role.py
app/models/: base.py  player.py  users.py
app/request_models/: player.py  users.py
configs/local/: config.env
docker/: docker-compose.yaml
scripts/: populate_db_local.py
web/: README.md  package-lock.json  package.json
web/public/: index.html
web/src/: App.js  index.css
web/src/components/: Header.js  LoginPage.js  MainApp.js  PlayerCard.js  PlayerForm.js  ProtectedRoute.js  TeamView.js
web/src/context/: AuthContext.js
web/src/services/: api.js
