[tool.poetry]
name = "volleyball-team-creator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[project]
name = "volleyball-team-creator"
version = "0.1.0"
description = ""
authors = [
    {name = "skleinhans-wr",email = "skleinhans@worldremit.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "annotated-types (==0.7.0)",
    "anyio (==4.9.0)",
    "click (==8.2.1)",
    "dotenv (==0.9.9)",
    "fastapi (==0.116.1)",
    "h11 (==0.16.0)",
    "idna (==3.10)",
    "pydantic (==2.11.7)",
    "pydantic-core (==2.33.2)",
    "python-dotenv (==1.1.1)",
    "sniffio (==1.3.1)",
    "sqlalchemy (==2.0.42)",
    "starlette (==0.47.2)",
    "typing-inspection (==0.4.1)",
    "typing-extensions (==4.14.1)",
    "uvicorn (==0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
